--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Test page</title>
 		<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-		<link rel="stylesheet" href="/resources/demos/style.css">
+		<!--link rel="stylesheet" href="/resources/demos/style.css"-->
+		<link rel="stylesheet" href="/jquery-ui-themes-1.12.1/themes/vader/jquery-ui.css">
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	</head>
